# crm-backend

./: .gitignore  .import_state_bdr.json  AGENTS.md  BACKEND_ENGINEER_SUMMARY.md  CONTINGENCY_PLAN_2026-03-05.md  CRM_DATABASE_CONNECTION.md  DATABASE_PROVISIONING_REPORT.md  HEARTBEAT.md  IDENTITY.md  LUCAS_ACTION_CHECKLIST_2026-03-05.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  docker-compose.yml  openclaw-proxy.js  openclaw-proxy.py  rollback-openclaw.sh  sending_sop.md  setup-openclaw-dashboard.sh  source_automation_plan.md  trello_board.json  trello_workflow.py  update_trello_backend_cards.py  upload_day3_cards.py
backend/: .gitignore  BACKEND_STATUS.md  COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240224_000001_initial_schema.py  20250225_000001_add_bdr_game_studios.py  20250225_000002_drop_game_studios.py  (+12 more)
backend/app/: main.py
backend/scripts/: add_50_studios_and_trello.py  ci.sh  enrich_contacts.py  ingest_funds.py  populate_bdr_contacts.py  rank_funds.py  seed_bdr_companies.py  seed_bdr_studios.py  seed_funds.py  seed_test_data.py  test_db_connection.py
backend/tests/: conftest.py  test_contacts_api.py  test_funds_api.py  test_interaction_service.py  test_interactions_api.py  test_meetings_api.py  test_notes_api.py  test_outreach_api.py  test_packets_api.py
docs/: erd.md  (+1 more)
tiered-approval-system/: README.md  pyproject.toml  trello-state.json
tiered-approval-system/scripts/: approval_dashboard.py
tiered-approval-system/tests/: test_tier_classifier.py
(+1284 files in other folders)
