[project]
name = "crm-backend"
version = "0.1.0"
description = "CRM data layer for gaming VC outreach"
authors = [
  { name = "Lucas Fulks" }
]
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.1.18",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "httpx>=0.27"
]

[tool.uv]
development = true

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
